# ganle-me

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tishici.md  vite.config.ts  功能设计文档.md
.github/workflows/: release.yml
scripts/: generate_logo.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  project.rs  settings.rs  tag.rs  task.rs  window.rs
src-tauri/src/db/: connection.rs  migration.rs  mod.rs  project_repo.rs  settings_repo.rs  tag_repo.rs  task_repo.rs
src-tauri/src/models/: mod.rs  project.rs  settings.rs  tag.rs  task.rs
src-tauri/src/services/: mod.rs  reminder_service.rs  repeat_service.rs  task_service.rs
src/components/: DuePicker.vue  MinimalView.vue  ReminderModal.vue  ResizeHandle.vue  Sidebar.vue  TaskInput.vue  TaskItem.vue  TaskList.vue  TitleBar.vue
src/stores/: app.ts
src/styles/: main.css
src/types/: index.ts
